--- a/result.tex
+++ b/result.tex
@@ -441,9 +441,9 @@ This structure lies at the boundary between the criteria for MMs and PhCs descri
 \section{Metallic screen with a slit} % references to ->
 
 \section{A fishnet - metallic screen with holes} % references to ->
+\label{sect_fishnet}
 %{{{
 \cite{yahiaoui2012metallo,rockstuhl2008light}
-\begin{figure} \caption{img/fishnet.pdf}  \centering \includegraphics[width=10cm]{img/fishnet.pdf} \end{figure} \clearpage
 %}}}
 
 \section{Other structures} % plasmonic spheres (note: resonance width determined by gamma of the metal?)
