experimental laser machining

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1225,6 +1225,11 @@ lts.fzu.cz/pdf/d-js.pdf
 	title = {MEEP metamaterial simulation scripts, \textit{https://github.com/FilipDominec/meep\_metamaterials}, last visited {M}ay 2014},
 	howpublished ={Online},
 }
+@misc{dominec2015_triostepper,
+	author = {Dominec, Filip},
+	title = {TrioStepper, controller for three stepper motors, \textit{https://github.com/FilipDominec/triostepper}, last visited {M}ay 2014},
+	howpublished ={Online},
+}
 @misc{dominec2014_imagej,
 	author = {Dominec, Filip},
 	title = {Calculating size distribution of powder particles using ImageJ, \textit{http://f.dominec.eu/granulo/index.html}, last visited {A}pril 2015},
