--- a/expe.tex
+++ b/expe.tex
@@ -82,22 +82,20 @@ from the numerically predicted results, which were moreover sensitive to subtle 
 % todo having discussed the measurement, we proceed to the fabrication of samples
 %The samples dielectric microspheres were manufactured by one of the collaborating groups.
 \paragraph{Preparation of dielectric sphere samples by the spray-dry process}%{{{
-Compared to most metamaterial designs, the fabrication of the dielectric spheres can be extremely simplified by the \textit{spray-drying} technique. In contrast with the expensive and time-consuming \textit{top-down} processes such as laser machining, litography or polishing, this is a typical \textit{bottom-up} process, where the particles are formed all within one procedure, though certain postprocessing is needed. 
+The collaboration with the laboratory of Dr. Patrick Mounaix in France %% Todo reference to Patrick's group somehow, and mention Oleg Mitrofanow (here, or later)
+provided us with high-permittivity TiO$_{2}$ spheres with the sizes from 30 to 100 $\upmu$m, which were examined by the terahertz spectroscopy as dielectric resonators, and possible constituents of a metamaterial with a negative effective permeability.
 \begin{figure}[ht] \caption{Microphotograph of the TiO$_{2}$ spheres after preliminary sieving} \label{fg_microphoto} \centering 
 \includegraphics[height=5cm]{img/microscope_TiO2_particles.pdf}
 \end{figure}
 
-The collaboration with the laboratory of Dr. Patrick Mounaix in France %% Todo reference to Patrick's group somehow, and mention Oleg Mitrofanow (here, or later)
-provided us with high-permittivity TiO$_{2}$ spheres with the sizes from 30 to 100 $\upmu$m. 
+Compared to most metamaterial designs, the fabrication of the dielectric spheres can be extremely simplified by the \textit{spray-drying} technique. In contrast with the expensive and time-consuming \textit{top-down} processes such as laser machining, litography or polishing, this is a typical \textit{bottom-up} process, where the particles are formed all within one procedure, though certain postprocessing is needed. 
 Rutile (TiO$_{2}$) was ground to a powder of sub-microscopic particles. 
 A suspension of these nanoparticles in ethanol was sprayed into flame. The average size of particles was determined by the solid concentration in the suspension, by feed rate and by gas flow. It immediately formed spherical droplets, which dried up and sintered in the hot air.  
-
 The resulting particles were annealed in a furnace to further solidify. The degree of recrystallization could be controlled by the temperature of the furnace from microscopic grains (at around 1200  $^{\circ}$C) to a sphere consisting of few crystalline domains, which were apparent in electron microscope (annealed at\footnote{Procedure details are from the personal communication with Dr. Patrick Mounaix and {Dr.} U-Chan Chung} 1300--1400 $^{\circ}$C). Note the temperatures used are still far below the melting temperature of rutile (i.e. 1800 $^{\circ}$C).
 
 Similar TiO$_{2}$ microspheres are also available commercially (e.g. from Brace, GmbH), and to the author's knowledge, they were made with a similar process.
 
 Only the low-temperature annealed samples were measured by the terahertz spectroscopy in this thesis. The fine-grained rutile was assumed to be well approximated by an isotropic dielectric. The size of the constituent crystalline grains was estimated from the observation of one microsphere ground on a glass of a pollarisation microscope: unlike polycrystalline aggregates, small rutile monocrystals appear as coloured particles due to their inherent birefringence. Therefore, the size of crystalline grains were determined in the order of few micrometers.
-
 The annealed spheres were further processed with the aim to break or eliminate clusters, by means of light milling with agathe mortar, which was separated afterwards by ultrasound bath cleaning in ethanol. Pre-sieving was performed on commercial sieves with 100, 53, 50, 40 and 38 $\upmu$m size of the square hole. The milling-cleaning-sieving procedure was repeated 2-3 times.
 %\textit{
 %(\ldots) As the spheres have been sintered at high temperature, they have been separated from a platinum plate with a small soft paintbrush followed by a light milling with a agathe mortar. The goal was to separate the spheres that are welded to their neighbours due to the sintering step. All the spheres were treated in ultrasound bath using ethanol as a liquid phase. After natural drying, the sieving was performed. (\ldots) square (or rectangular) holes sieves were used. The meshes used were 106, 100, 53, 50, 40 and 38 micrometer. As a dry sieving step was performed, the particles were light milled again in order to try to break possible agglomerates which would not go through the mesh. This process was repeated 2-3 times and a final wet sieving with ethanol was performed in order to "wash" the spheres. No special measures were taken according to their shapes. (\ldots) } 
@@ -106,7 +104,7 @@ The annealed spheres were further processed with the aim to break or eliminate c
 
 %}}}
 \paragraph{Theory of anisotropic sieves}%{{{
-Triple sieving on commercial sieves, weaved from stainless steel wire, did not provide narrow enough size distribution. We therefore developed a more exact method for sample refinement and characterisation. 
+Triple sieving on commercial sieves, weaved from stainless steel wire, did not provide narrow enough size distribution, which is however essential for obtaining a narrow collective resonance peak of the sample. We therefore developed a more exact method for very fine sample sieving and characterisation. 
 
 \begin{figure}[ht] \caption{Correspondence between the hole shape (above) and the set of ellipsoids that can pass through the hole (below), determined by their medium and minor axes. Somewhat surprisingly, the \textbf{(a)} square and \textbf{(b)} lozenge holes result in circular/elliptic set of passing particles, whereas the \textbf{(c)} circular and \textbf{(b)} elliptic holes result in the square/rectangular shape of such an region.\\
 For clarity, some limiting-case examples of the ellipsoid projection and the equivalent position on the minor-major ellipse axis plot are drawn in blue, violet and red. } \label{fg_sieve_pass_notpass} \centering 
@@ -127,9 +125,9 @@ However, this particular fraction of particles is exactly what one is interested
 %Finally, they were carefully sieved in many iterations, to select a size fraction as narrow as possible.
 Employing the idea of anisotropic sieves from Fig. \ref{fg_double_sieving}a, the author assembled the first prototype based on nylon sieves, as depicted in Fig. \ref{fg_sieving1}. Two glass containers were cut on a lathed from a 
 % diam
-glass tube, and on their bottom, nylon sieves were glued. The side of the sieve holes was 60$\pm$5 $\upmu$m, and while the above sieve was kept isotropic. 
+glass tube, and on their bottom, the sieves were glued and round-clipped. The side of the sieve holes was 60$\pm$5 $\upmu$m. The above sieve was kept isotropic. 
 The mesh was woven of nylon threads, so the bottom sieve could easily be stretched by ca. 20-25 \% in diagonal direction. 
-This  property however prove to be also detrimental for precise sieving, as upon little force, the threads easily bent aside, allowing oversized particles either to pass or to get stuck permanently and to block the sieve within few minutes. To resolve the latter problem, two additional narrow glass rings were cut, with much coarser sieves  with 150 $\upmu$m pitch glued on the bottom, to allow little spherical springs bounce beneath the sieves and to loosen the particles that got stuck in the holes. A cover on top prevented the particles to jump out of the above container. Whole stack was carefully lowered into a test tube with a greater diameter, and vibrated by a tiny electric motor glued on the bottom.
+This  property however prove to be also detrimental for precise sieving, as the threads easily bent aside under only a small force, thus allowing oversized particles either to pass or to get stuck permanently and to block the sieve within few minutes. To resolve the latter problem, two additional narrow glass rings were cut, with much coarser sieves  with 150 $\upmu$m pitch glued on the bottom, to allow little spherical springs bounce beneath the sieves and to loosen the particles that got stuck in the holes. A cover on top prevented the particles to jump out of the above container. Whole stack was carefully lowered into a test tube with a greater diameter, and vibrated by a tiny electric motor glued on the bottom.
 \begin{figure} \caption{A photograph \textbf{(a)} and a scheme \textbf{(b)} of the first sieving apparatus based on square-lozenge sieve pair, with a slightly exaggerated illustration of its operation for an input of four different microspheres \textbf{(c)}}  \centering \includegraphics[width=12cm]{img/expe/sieving1.pdf} \label{fg_sieving1} \end{figure} 
 
 %}}}
@@ -167,7 +165,7 @@ Computer granulometry
 is a well-established technique, and is implemented in several advanced image processing programs, of which \textit{ImageJ} was selected \cite{abramoff2004image}. 
 The transmission microphotographs were acquired either with the lowest magnification on a laboratory microscope, or with a portable microscopic digital camera, yielding similar results.
 The first operation on the somewhat blurred photographs [see Fig. \ref{fg_sievingstats}(a)] was to establish the intermediate brightness level between the image's bright and dark areas, and apply a threshold so that the image was a binary function. Then the \textit{ImageJ}'s \textit{watershed} algorithm was applied to relatively reliably resolve two or more touching particles, and a particle outline was found [cyan lines in \ref{fg_sievingstats}(b)]. Finally, the particle outlines were fitted by ellipses. 
-\begin{figure}[ht] \caption{\textbf{(a)} A small section of a microphotograph of a sample before sieving with a \textbf{(b)} the corresponding identification of particles in ImageJ} \label{fg_sievingstats} \centering 
+\begin{figure}[ht] \caption{\textbf{(a)} A small section of a microphotograph of a pre-sieved sample before applying the described double-sieve method, \textbf{(b)} the corresponding identification of particles in ImageJ} \label{fg_sievingstats} \centering 
 \textbf{(a)}\includegraphics[height=5cm]{img/technology/imagej_photo.pdf}
 \textbf{(b)}\includegraphics[height=5cm]{img/technology/imagej_found.pdf}
 \end{figure}
@@ -177,39 +175,42 @@ An intrinsic deficiency of this method results from that it was not possible to 
 It can be however estimated that if % TiO$_{2}$ 
 ellipsoidal particles were randomly sprinkled on the glass, they would lie on their flat side -- i.e. their orientation would enable to measure the \textit{medium} $\rho_b$ and \textit{major} axis $\rho_c$ of the ellipsoid. This is in contrast with the process of sieving, as described above, where the particles were discriminated according to their and \textit{minor} $\rho_a$ and \textit{medium} $\rho_b$ axes. 
 The error is however somewhat reduced by the non-ellipsoidal shape of the particles, which presumably prevented them from free overturning. %% NOTE this again when showing sphere experimental spectra
-\todo{should something be added??}
+\todo{add the previous and resulting statistics? the THz spectra should better go to the Results }
 %}}}
 
 \section{Laser micro-machining}
 \paragraph{Fabrication of dielectric bars}%{{{
-Dielectric or metallic structures can be made by micromachining a thin polished slab of the given material. For instance, metamaterials designed to operate around 1 THz, which corresponds to the free-space wavelength of 0.3 mm, have their unit cells of a similar size or less, and the finest features are usually an order of magnitude smaller. 
-A similar sample used in experiment consisted of bars from strontium titanate (SrTiO$_{3}$) with  rectangular cross-section (see Fig. \ref{fg_STO_bar_geom}), 
+Dielectric or metallic structures can be made by cutting a thin polished slab of the given material. For instance, metamaterials designed to operate around 1 THz, which corresponds to the free-space wavelength of 0.3 mm, have their unit cells of a similar size or less, and the finest features are usually an order of magnitude smaller. 
+A similar sample used in experiment consisted of bars from strontium titanate (SrTiO$_{3}$) with a rectangular cross-section (see Fig. \ref{fg_STO_bar_geom}), 
 where a structure with 10--30 $\upmu$m resolution was written into a thin slab of the dielectric of a similar thickness \cite{yahiaoui2011tunable}.
 
-If the slab is made of a monocrystal or a ceramic, it is usually extremely brittle and also sensitive to breaking due to thermal stresses. Femtosecond laser micro-machining can alleviate both problems thanks to evaporating most of the heated material before the heat can spread by thermal conduction. Fabrication of the strontium titanate bars was done by the professional Alphanov facility in France.
-
-\todo{write about deposition of gold electrodes?}
+If the slab is made of a monocrystal or a ceramic, it is usually extremely brittle and also sensitive to breaking due to thermal stresses. Femtosecond laser micro-machining can alleviate both problems thanks to evaporating most of the heated material before the heat can spread by thermal conduction. Fabrication of the strontium titanate bars was accomplished by the professional Alphanov facility in France.
+\todo{write about the deposition of gold electrodes?}
 \todo{should make some conclusion}
 %}}}
 \paragraph{Fabrication of sieves and fishnet metamaterial layers}%{{{
 Compared to the dielectrics, femtosecond machining of metallic sheets into meshes is relatively easy and was implemented in our laboratory. Machining of free-standing wire media was not succesfull and no such sample was finished, as the resulting thin wires were bent out of their original plane and their spacing was uneven.
 
 The meshes had two purposes -- either as sieves used in the second sieving apparatus described above, or as metamaterial samples known as \textit{fishnets}, which are predicted to possibly have negative index of refraction (see Sect. \ref{sect_fishnet}). 
-The femtosecond laser used was different from that serving as the femtosecond source for terahertz spectroscopy (Sect. \ref{sect_tdts}). Sufficient energy in the pulse power was obtained from the \textit{Spectra Physics Spitfire Ace} multipass amplifier, with \todo{}
-The output beam had to be attenuated to obtain finer cut at the expense of slightly slower speed. 
-
-
-
-\begin{figure}[ht] \caption{\textbf{(a)} Laser micromachining of the steel sheet, and \textbf{(b)} the resulting sieves} \label{fg_microfab} \centering 
+The femtosecond laser used was different from that serving as the femtosecond source for terahertz spectroscopy (Sect. \ref{sect_tdts}). More than sufficient power was provided by the \textit{Spectra Physics Spitfire Ace} multipass titanium-sapphire amplifier, with 1 mJ in ca. 50 fs impulses, at 5 kHz repetition rate; its output beam had to be attenuated to obtain finer cut at the expense of slightly slower speed. The mechanical part consisted of two crossed \textit{Owis} stepper-motor controlled linear stages, and a fast mechanical shutter allowed to control the beam with a sufficient resolution of ca. 100 ms. 
+\begin{figure}[ht] \caption{\textbf{(a)} Laser micromachining of the steel sheet with a moving four-sample holder, metal vapour ventilation, and the focusing lens. Bright plasma spot is visible at the focus. \textbf{(b)} The resulting sieves made from 30 $\mu$m stainless sheet with 10 mm patterned diameter.} \label{fg_microfab} \centering 
 \textbf{(a)}\includegraphics[height=5cm]{img/technology/sieve2_drilling_m.pdf}
 \textbf{(b)}\includegraphics[height=5cm]{img/technology/steel_sieve_on_paper.pdf}
 \end{figure}
 
-\begin{figure} \caption{Mechanically drilled fishnet}  \centering \includegraphics[width=10cm]{img/fishnet.pdf} \end{figure} \clearpage
+The 3 mm wide beam was focused by an anti-reflexed lens with a focal length of 10 mm or 50 mm, with the tighter focusing giving slightly better results. Particularly with the focal length of 10 mm, it was important to accurately focus the beam. To this end, we made use of back-collimation of the reflected beam as follows: When the metal sheet was exactly in focus, the reflection of the (focused) beam was again collimated by the lens into a non-diverging beam. Separating a part of the reflected beam energy sideways by a skewed glass in front of the lens, one could fine-tune the lens position seeking for the smallest spot diameter on a distant screen.
+
+A compact stepper-motor controller of a custom design \cite{dominec2015_triostepper} facilitated the operation by the means of Python scripting, which allowed to compose the shutter opening, movement and shutter closing into one hole-drilling sequence, which could be composed to cut out the whole mesh structure. Finally, multiple different meshes with different parameters could be made on one metal sheet in a batch, without user interaction.
+
+%}}}
+\paragraph{Mechanical drilling of fishnets}%{{{
+\begin{figure}[ht] \caption{Mechanically drilled fishnet}  \centering \includegraphics[width=10cm]{img/fishnet.pdf} \end{figure}
+
+To achieve the required precision of sieving, we fabricated the sieves by femtosecond laser drilling of 20--30 $\upmu$m thick stainless steel sheets (Fig. \ref{fg_microfab}). 
+%These sieves then were employed in a device that subjected the microsphere sample to acoustic vibrations, improving the speed of the demanding sieving process to acceptable level (Fig. \ref{fg_microfab}b,c).
+
 \todo{make a figure from a photo of a laser-machined metallic fishnet (or, mesh)}
 
-To achieve the required precision of sieving, we fabricated the sieves by femtosecond laser drilling of 20 $\upmu$m thick stainless steel sheets (Fig. \ref{fg_microfab}). 
-%These sieves then were employed in a device that subjected the microsphere sample to acoustic vibrations, improving the speed of the demanding sieving process to acceptable level (Fig. \ref{fg_microfab}b,c).
 \todo{comment on the drilled fishnet}
 \todo{}
 \todo{}
